Fixes to truncated field. (#1214)
- Hide the field until it has been initialized (prevents flashing that is caused by the field getting rendered before JS has been run).
- Set cursor of Show more/less buttons to pointer.

--- a/themes/finna2/less/bootstrap.less
+++ b/themes/finna2/less/bootstrap.less
@@ -274,13 +274,17 @@ label.list-group-item {border-radius:0;font-weight:normal;margin-top:0;padding-l
 //Finna mixins
 .truncate-field {
     overflow: hidden;
+    display: none;
+    &.truncate-done {
+        display: block;
+    }
 }
 .less-link i, .less-link-top i {
     padding-top: 2px;
     vertical-align: middle;
 }
 .more-link, .less-link, .less-link-top {
-    cursor: default;
+    cursor: pointer;
     font-weight: 600;
     text-transform: uppercase;
     font-size: 0.9em;
